# re2

./: Cargo.toml  README.md
re2-core/: Cargo.toml
re2-core/src/: datastructs.rs  entity_component.rs  lib.rs  macros.rs
re2-derive/: Cargo.toml
re2-derive/src/: impl_component_macro.rs  impl_lazy_static_generation.rs  lib.rs
re2-metadata/: Cargo.toml
re2-metadata/src/: lib.rs
re2-metadata/src/components/: entity_components.rs  mod.rs  scene_components.rs
re2-metadata/src/metadata/: event_metadata.rs  mod.rs  render_metadata.rs
re2-scene/: Cargo.toml
re2-scene/src/: data_pool.rs  game.rs  lib.rs  world.rs
re2-scene/src/system_traits/: event_listener.rs  initializer.rs  mod.rs  updater.rs
re2-system/: Cargo.toml
re2-system/src/: event_system.rs  lib.rs  render_system.rs
re2-system/src/initialization_helpers/: mod.rs
re2-system/src/test_systems/: event_test.rs  mod.rs
shaders/: color_blend.fs  default.fs  default.vs  test.fs  test.vs
src/: back  main.rs
src/tests/: macros.rs  mod.rs  test_core.rs  test_event.rs  test_main.rs  test_render.rs  test_world.rs
src/worlds/: mod.rs
