[package]
name = "re2_derive"
version = "0.1.0"
authors = ["InternationalDefy <DTEye1533014901@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc_macro = true

[dependencies]
syn = "0.14.4"
quote = "0.6.3"
proc-macro2 = "*"
lazy_static = "1.4.0"